Prepare to deploy to GitHub Pages.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moebius-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://roninbar.github.io/moebius-web",
   "dependencies": {
     "@babel/helper-builder-react-jsx": "^7.10.4",
     "@material-ui/core": "^4.11.0",
@@ -79,6 +80,8 @@
     "yarn": "^1.22.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -112,5 +115,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
