--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "yarn": "^1.22.10"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
