--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moebius-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://roninbar.github.io/moebius-web",
+  "homepage": "https://roninbar.github.io/mobius",
   "dependencies": {
     "@babel/helper-builder-react-jsx": "^7.10.4",
     "@material-ui/core": "^4.11.0",
