Rename from "moebius-web" to "mobius".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moebius-web",
+  "name": "mobius",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://roninbar.github.io/mobius",
