--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     }
   },
   "rules": {
+    "no-multi-assign": "off",
     "func-names": "off",
     "object-curly-spacing": ["warn", "always"],
     "no-unused-vars": [
