--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "istanbul-reports": "^3.0.2",
     "jest-puppeteer": "^4.4.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "nyc": "^15.1.0",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0",
@@ -70,7 +69,7 @@
     "react-uuid": "^1.0.2",
     "recoil": "0.1.2",
     "redux": "^4.0.5",
-    "scss-loader": "^0.0.1",
+    "sass": "^1.50.1",
     "serve": "^11.3.2",
     "sinon": "^9.2.0",
     "styled-components": "^5.1.1",
